--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -3,7 +3,7 @@
 
 <a href="/profile" style="margin-left: 1340px; position: absolute; left: 100; width: 99px; height: 40px"
     class="btn btn-primary">HOME</a>
-<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px"
+<a href="/logout" style="margin-left: 1490px; position: absolute; left: 100; width: 99px; height: 40px"
     class="btn btn-dark">LOG OUT</a>
 
 
@@ -16,7 +16,8 @@
                 class="card-img-top" alt="..." title="Id: {{this.product._id}}">
             <div class="card-body">
 
-                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.product.title}} - {{this.product.description}}
+                <h1 id="title" ; style="text-align: center; font-size:25px;" class="card-text"> {{this.product.title}} -
+                    {{this.product.description}}
                 </h1>
                 <h2 style="text-align: center; font-size:20px;" class="card-text"> $ {{this.product.price}}</h2>
                 <h2 style="color:rgb(0, 0, 0); text-align: center; font-size:20px;" class="card-text"> Quantity:
@@ -26,18 +27,34 @@
                     {{this.quantity}}</h2>
 
                 <div style="align-items: center; justify-content: space-between;">
-                    <button onclick="deleteProductFromCart('65161b18b4f0ae3a37ba72e2' , '{{this._id}}')"
-                        style="float: right; display: block; margin: 0 auto;"
-                        class="btn btn-danger">DELETE</button>
-                        
+                    <button onclick="deleteProductFromCart('65161cf7b4f0ae3a37ba7332' , '{{this._id}}')"
+                        style="float: right; display: block; margin: 0 auto;" class="btn btn-danger">DELETE</button>
                 </div>
             </div>
         </div>
+
+
         {{/each}}
+
+
     </div>
 
 
+
+
+
 </div>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/js/cart.js"></script>
+
+
 
 
 
