--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,4 +1,5 @@
-<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px" class="btn btn-dark">LOG OUT</a>
+<a href="/logout" style="margin-left: 1590px; position: absolute; left: 100; width: 99px; height: 40px"
+    class="btn btn-dark">LOG OUT</a>
 
 <header>
 
@@ -13,10 +14,15 @@
 
 </div style="margin-top: 1000px; box-shadow: 5px 5px 10px #888888;">
 <div class="card border-dark mb-3 box-shadow: 5px 5px 10px #888888;" style="max-width: 18rem;">
-    <h2 style="font-weight: bold; padding-top: 20px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Email: {{email}}</h2>
-    <h2 style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Account type: {{role}}</h2>
-    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgb(64, 64, 64);">Number of logins: {{visitCount}} </p>
-    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgba(121, 121, 121, 0.86);">Date: {{dateToday}} </p>
+    <h2 style="font-weight: bold; padding-top: 20px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Email:
+        {{email}}</h2>
+    <h2 style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color: rgb(64, 64, 64);">Account
+        type: {{role}}</h2>
+    <p style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgb(64, 64, 64);">Number
+        of logins: {{visitCount}} </p>
+    <p
+        style="font-weight: bold; padding-top: 0px; padding-left: 30px; font-size:15px; color:  rgba(121, 121, 121, 0.86);">
+        Date: {{dateToday}} </p>
 </div>
 </div>
 
@@ -36,7 +42,8 @@
             style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Shop from the comfort of your home...</h5>
-            <a href="http://localhost:8080/products" style="font-weight: bold; width: 200px" class="align-items-center btn btn-success">GO TO STORE</a>
+            <a href="http://localhost:8080/products" style="font-weight: bold; width: 200px"
+                class="align-items-center btn btn-success">GO TO STORE</a>
         </div>
     </div>
 
@@ -47,7 +54,8 @@
             style="font-weight: bold;  display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Contact us through our chat...</h5>
-            <a href="http://localhost:8080/messages" style="font-weight: bold; width: 200px" class="align-items-center btn btn-dark">CHAT</a>
+            <a href="http://localhost:8080/messages" style="font-weight: bold; width: 200px"
+                class="align-items-center btn btn-dark">CHAT</a>
         </div>
     </div>
 
@@ -57,9 +65,23 @@
             style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> Cart </h5>
-            <a href="http://localhost:8080/carts/65161b18b4f0ae3a37ba72e2" style="font-weight: bold; width: 200px" class="align-items-center btn btn-primary"> CART </a>
+            <a href="http://localhost:8080/carts/65161cf7b4f0ae3a37ba7332" style="font-weight: bold; width: 200px"
+                class="align-items-center btn btn-primary"> CART </a>
         </div>
     </div>
+
+
+    <div class="card" style="display: flex; width: 400px; height: 400px;">
+        <img src="https://www.cmcrossroads.com/sites/default/files/article/2016/configuration-management-plan.jpg"
+            style="display: flex; width: 400px; height: 273px" ; class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Adjust your settings </h5>
+            <a href="http://localhost:8080/settings" style="font-weight: bold; width: 200px"
+                class="align-items-center btn btn-danger"> SETTINGS </a>
+        </div>
+    </div>
+
+
 
 </section>
 
