--- a/src/views/checkoutFinal.handlebars
+++ b/src/views/checkoutFinal.handlebars
@@ -1,8 +1,3 @@
-<a onclick="window.location.href='/carts/65161cf7b4f0ae3a37ba7332'"
-  style="margin-right: 228px; position: absolute; right: 0; width: 96px; height: 42px" class="btn btn-success"> CART
-</a>
-
-
 <a href="/profile" style="margin-left: 1340px; position: absolute; left: 100; width: 99px; height: 40px"
   class="btn btn-primary">HOME</a>
 <a href="/logout" style="margin-left: 1490px; position: absolute; left: 100; width: 99px; height: 40px"
@@ -33,49 +28,12 @@
         <br>
         <br>
 
-<div class="card" style="width: auto;">
-  <div class="table-responsive">
-    <table class="table table-bordered table-striped">
-
-      <tbody>
-        <tr>
-          <td class="text-center">
-            <!-- Primer columna: Cantidad -->
-            <h1 id="products-quant" style="font-size: 14px;" class="card-text"></h1>
-          </td>
-          <td class="text-center">
-            <!-- Segunda columna: Titulo -->
-            <h1 id="products-title" style="font-size: 14px;" class="card-text"></h1>
-          </td>
-          <td class="text-center">
-            <!-- Tercera columna: Descripcion -->
-            <h1 id="products-description" style="font-size: 14px;" class="card-text"></h1>
-          </td>
-          <td class="text-center">
-            <!-- Cuarta columna: Precio -->
-            <h1 id="products-price" style="font-size: 14px;" class="card-text"></h1>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 
 
-
-
-
-        <h1 id="products-quantity" style="text-align: right; margin-top: 80px; font-size: 18px;" class="card-text; thead-dark;"></h1>
 
         <h1 id="total-amount" style="text-align: right; font-size: 18px;" class="card-text; thead-dark;"> </h1>
 
 
-
-      </div>
-      <div style="margin-bottom: 30px">
-        <button onclick="window.location.href='/carts/checkout/finish'"
-          style="display: block; margin: 0 auto; padding: 20px; width: 200px;" class="btn btn-danger"> PAY </button>
-      </div>
 
     </div>
   </div>
@@ -85,4 +43,4 @@
   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/checkout.js"></script>
+<script src="/js/checkoutFinal.js"></script>
